(fix): wrap employees with dashboard layout

--- a/src/styles/components/_dashboardLayout.scss
+++ b/src/styles/components/_dashboardLayout.scss
@@ -54,7 +54,6 @@
 
     @media screen and(min-width: 992px) {
       padding-left: 16rem;
-      width: calc(100% - 16rem);
       margin: 0 auto;
     }
   }
